# openeuler-IB_Robot

./: .gitignore  .gitmodules  .pylintrc  .shrc_local  AGENTS.md  README.en.md  README.md  config.json
.agents/skills/: README.md
.colcon/: defaults.yaml
action_dispatch/: README.md  setup.cfg  setup.py
docs/: architecture.md  roadmap.md
lerobot_description/: CMakeLists.txt  package.xml
lerobot_description/launch/: so101_display.launch.py  so101_gazebo.launch.py
lerobot_description/urdf/: so101_base.xacro  so101_ros2_control.xacro
libs/atomgit_sdk/: README.md  pyproject.toml  test_sdk_core.py
libs/atomgit_sdk/scripts/: migrate_json_fields.py
libs/atomgit_sdk/src/atomgit_sdk/: __init__.py  client.py  config.py  exceptions.py  models.py
libs/atomgit_sdk/src/atomgit_sdk/services/: __init__.py  issue_service.py  pr_service.py  repair_service.py
libs/atomgit_sdk/src/atomgit_sdk/utils/: __init__.py  content.py  diff.py  url.py
libs/atomgit_sdk/tests/: test_diff_position.py  test_repair_service.py
robot_config/: README.en.md  README.md  package.xml  setup.py
robot_description/: CMakeLists.txt
robot_interface/: package.xml
robot_moveit/: CMakeLists.txt
ros2_ws/: .gitignore  README.md  pyproject.toml
ros2_ws/src/so101_hardware_cpp/: CMakeLists.txt  README.en.md  README.md  package.xml  so101_hardware_cpp_plugin.xml
ros2_ws/src/so101_hardware_cpp/include/so101_hardware_cpp/: so101_system_hardware.hpp
ros2_ws/src/so101_hardware_cpp/src/: so101_system_hardware.cpp
ros2_ws/src/so101_hw_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/so101_hw_interface/config/: so101_calibration copy.yaml  so101_calibration.yaml  so101_calibration.yaml.bak  so101_controllers.yaml  so101_leader_calibration.yaml
ros2_ws/src/so101_hw_interface/launch/: so101_hw.launch.py  so101_hw_dual_mode.launch.py
ros2_ws/src/so101_hw_interface/lerobot/utils/: utils.py
ros2_ws/src/so101_hw_interface/so101_hw_interface/: calibration.py  calibration_service.py  leader_arm_pub.py  motor_bridge.py  read_motor_steps.py  so101_calibrate_arm.py  so101_system_interface.py
ros2_ws/src/so101_hw_interface/so101_hw_interface/motors/feetech/: feetech.py
rosetta/: README.md  setup.py
rosetta_interfaces/: CMakeLists.txt  package.xml
scripts/: build.sh  cleanup_ros.sh  install_ros_colcon.sh  setup.sh  validate_config.py
so101_hardware/: CMakeLists.txt  package.xml  setup.py
so101_hardware/config/: so101_controllers.yaml
so101_hardware/launch/: leader_arm_pub.launch.py
so101_hardware/scripts/: calibrate_arm.py  leader_arm_pub.py  motor_bridge.py  read_motor_steps.py
so101_hardware/so101_hardware/calibration/: __init__.py  constants.py  interactive.py  validation.py
so101_hardware/so101_hardware/motors/: calibration_gui.py
so101_hardware/src/: so101_system_hardware.cpp
src/: .gitignore  README.md
src/dataset_tools/: README.md  package.xml  setup.cfg  setup.py
src/dataset_tools/dataset_tools/: bag_to_lerobot.py  camera_alignment.py  episode_recorder.py  frame_detector.py  opencv_utils.py  record_cli.py
src/dataset_tools/docs/tools/: camera_alignment.md
src/dataset_tools/test/: test_camera_alignment.py
src/ibrobot_msgs/: CMakeLists.txt  package.xml
src/ibrobot_msgs/action/: RunPolicy.action
src/ibrobot_msgs/msg/: RobotStatus.msg  VariantsList.msg
src/ibrobot_msgs/srv/: RecognizeFile.srv  SetHotwords.srv
src/inference_service/: TESTING.md  package.xml  setup.cfg  setup.py
src/inference_service/inference_service/: __init__.py  base_model_node.py  lerobot_policy_node.py  passive_inference_node.py  pure_inference_node.py
src/inference_service/inference_service/components/: __init__.py  fastdds_utils.py  postprocessor.py  preprocessor.py
src/inference_service/resource/: inference_service
src/model_utils/: package.xml  setup.cfg  setup.py
src/model_utils/model_utils/: __init__.py  export_onnx_node.py  loss_compare_node.py
src/robot_config/: README.en.md  README.md  package.xml  setup.py
src/robot_config/config/: xbox_mapping.yaml
src/robot_config/config/contracts/: act_grab_pan.yaml  pi05_multi_tasks.yaml
src/robot_config/config/robots/: so101_dual_arm.yaml  so101_single_arm.yaml  test_single_arm_single_cam.yaml
src/robot_config/launch/: robot.launch.py
src/robot_config/resource/: robot_config
src/robot_config/robot_config/: __init__.py  config.py  contract_builder.py  contract_utils.py  loader.py  utils.py
src/robot_config/robot_config/generators/: __init__.py  contract.py
src/robot_config/robot_config/launch_builders/: __init__.py  control.py  description.py  execution.py  moveit.py  perception.py  recording.py  sim_peripheral_bridge.py  simulation.py  teleop.py  voice_asr.py
src/robot_config/robot_config/launch_builders/sim_backend/: __init__.py  base_adapter.py  camera_presets.py  gazebo_adapter.py  mujoco_adapter.py
src/robot_config/test/: test_config.py  test_sim_backend.py
src/robot_moveit/: package.xml
src/robot_moveit/config/: so101_servo.yaml
src/robot_moveit/config/lerobot/so101/: joint_limits.yaml  kinematics.yaml  moveit.rviz  pilz_cartesian_limits.yaml  so101.srdf
src/robot_moveit/launch/: so101_moveit.launch.py
src/robot_teleop/: CMakeLists.txt  README.en.md  README.md  package.xml  setup.cfg  setup.py
src/robot_teleop/config/: servo_params.yaml
src/robot_teleop/launch/: phone_servo_teleop.launch.py  teleop_device.launch.py
src/robot_teleop/robot_teleop/: __init__.py  base_teleop.py  config_loader.py  device_factory.py  safety_filter.py  teleop_node.py
src/robot_teleop/robot_teleop/devices/: __init__.py  leader_arm.py  xbox_controller.py
src/robot_teleop/robot_teleop/phone/: __init__.py  config_phone.py  phone_device.py
src/robot_teleop/robot_teleop/utils/: __init__.py  rotation.py
src/sim_models/: package.xml  setup.cfg  setup.py
src/sim_models/scenes/empty/: empty.world.template  empty.xml.template
src/sim_models/scenes/pick_banana/: layout.yaml  pick_banana.world.template  pick_banana.xml.template
src/sim_models/sim_models/: scene_compiler.py
workflows/: jenkinsfile_gate
(+184 files in other folders)
