<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dataset_tools</name>
  <version>0.0.0</version>
  <description>Dataset collection and conversion tools for Imitation Learning</description>
  <maintainer email="wuxiaoqiang.rtos@huawei.com">xqw</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>sensor_msgs</depend>
  <depend>ibrobot_msgs</depend>
  <depend>tensormsg</depend>
  <depend>rosetta</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
