<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inference_service</name>
  <version>0.1.0</version>
  <description>Multi-model inference service for LeRobot-ROS2 integration.

  Provides a standardized framework for running machine learning models as ROS2 nodes,
  supporting VLA, YOLO+GraspNet, VLN, and custom models.
  </description>
  <maintainer email="wuxiaoqiang.rtos@huawei.com">xqw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>rclpy_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rosbag2_py</depend>

  <depend>ibrobot_msgs</depend>
  <depend>tensormsg</depend>
  <depend>robot_config</depend>

  <exec_depend>ros2python</exec_depend>
  <exec_depend>ros2idl_runtime_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
