<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_config</name>
  <version>0.0.1</version>
  <description>Unified robot configuration system for ros2_control and peripherals</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_components</depend>

  <!-- Camera drivers (executed, not linked) -->
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>voice_asr_service</exec_depend>

  <!-- ros2_control -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Gazebo simulation -->
  <exec_depend>gazebo_ros2_control</exec_depend>

  <!-- TF -->
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
