[develop]
script_dir=$base/lib/robot_teleop

[install]
install_scripts=$base/lib/robot_teleop

[metadata]
name = robot_teleop
version = 0.1.0
description = Minimal serial-to-controller bridge for zero-latency teleoperation
author = IB-Robot Team
maintainer = IB-Robot Team
license = Apache-2.0

[options]
packages = find:
zip_safe = true