<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_models</name>
  <version>0.1.0</version>
  <description>Scene assets and scene compiler for IB-Robot simulation (pick_banana and more)</description>
  <maintainer email="zll@example.com">zll</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
