<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_hw_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wuxiaoqiang.rtos@huawei.com">xqw</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>hardware_interface</depend>
  <depend>lerobot_description</depend>
  <depend>topic_based_ros2_control</depend>
  <depend>forward_command_controller</depend>
  <depend>position_controllers</depend>
  <depend>python3-serial</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
